# perfect-deployer

./: README.md  pyproject.toml
examples/simple_eks/: agent.py  busybox.yaml  my_flow.py
src/perfect_deployer/: interface.py
src/perfect_deployer/implementations/flow_storage/: s3.py
src/perfect_deployer/implementations/infra/: eks.py
src/perfect_deployer/implementations/metadata/: __init__.py
tests/: test_interface.py
