[tool.poetry]
name = "perfect_deployer"
version = "0.1.0"
description = "Simplify deployment of flows on prefect by using flow-builder"
packages = [{ include = "perfect_deployer", from = "src" }]
authors = []

readme = "README.md"
include = ["README.md", "LICENSE.txt", "src/perfect_deployer/py.typed"]
exclude = [
    "*.so",
    "*.pyc",
    "*~",
    "#*",
    ".git*",
    ".coverage*",
    "DS_Store",
    "__pycache__",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
prefect = "^2.0.0"
wrapt = "^1.15.0"
s3fs = "^2023.6.0"

[tool.poetry.dev-dependencies]
# type hints
mypy = "1.3.0"
# formatting
black = "23.3.0"
# linting
ruff = "0.0.269"
# import sorting
isort = "5.12.0"
# testing
pytest = "7.3.1"
pytest-sugar = "0.9.7"
# on-demand environments
nox = "2023.4.22"
nox-poetry = "1.0.2"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_no_return = false
allow_untyped_defs = true
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "wrapt.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = ["perfect_deployer"]
order_by_type = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
